--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,19 +2,19 @@ languages:
   PHP: true
   JavaScript: true
 exclude_paths:
-- alice/build/*
-- alice/cli/*
-- alice/dev/*
-- alice/doc/*
-- alice/node_nomdules/*
-- alice/tmp/*
+- "alice/build/*"
+- "alice/cli/*"
+- "alice/dev/*"
+- "alice/doc/*"
+- "alice/node_nomdules/*"
+- "alice/tmp/*"
 - "*.md"
-- bob/cli/*
-- bob/data/*
-- bob/docs/*
-- Docker/*
-- jenkins/*
-- library/*
-- local/*
-- tools/*
-- vendor/*
+- "bob/cli/*"
+- "bob/data/*"
+- "bob/docs/*"
+- "Docker/*"
+- "jenkins/*"
+- "library/*"
+- "local/*"
+- "tools/*"
+- "vendor/*"
