--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,7 @@ engines:
     enabled: true
   brakeman:
     enabled: true
-      config: first_app/
+      path: first_app/
 ratings:
    paths:
    - app/**
