--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,7 +4,7 @@ engines:
   brakeman:
     enabled: true
       config:
-        path: first_app/
+        p: first_app/
 ratings:
    paths:
    - app/**
